objects/MTR_Email_Configuration__mdt.object
<CustomObject>
    <description>This custom metadata will be used to hold the email functionality related details for business units</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RISK</fullName>
                    <default>true</default>
                    <label>RISK</label>
                </value>
                <value>
                    <fullName>TAX</fullName>
                </value>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>It stores the email template developer name</description>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>It stores the OrgWideEmailAddress&apos;s DisplayName</description>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>en-gb</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>en-us</fullName>
                </value>
                <value>
                    <fullName>fr-ca</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is based on MyTR_Category from case object.</description>
        <label>Product Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Title__c</fullName>
        <label>Product Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ODEN</fullName>
                    <default>true</default>
                    <label>ODEN</label>
                </value>
                <value>
                    <fullName>Compliance Learning</fullName>
                </value>
                <value>
                    <fullName>Regulatory Intelligence</fullName>
                </value>
                <value>
                    <fullName>RI Feeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CANADA</fullName>
                    <default>true</default>
                    <label>CANADA</label>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>USL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReplyTo_Address__c</fullName>
        <description>It stores the OrgWideEmailAddress&apos;s DisplayName</description>
        <label>ReplyTo Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Tax</fullName>
                    <default>true</default>
                    <label>Professional Tax</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>My TR</fullName>
                    <default>true</default>
                    <label>My TR</label>
                </value>
                <value>
                    <fullName>UE Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MTR Email Configuration</label>
    <listViews>
        <fullName>MTR_Email</fullName>
        <columns>MasterLabel</columns>
        <columns>Business_Unit__c</columns>
        <columns>Email_Template__c</columns>
        <columns>From_Address__c</columns>
        <columns>Product_Query__c</columns>
        <columns>Product_Title__c</columns>
        <columns>ReplyTo_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>MTR Email</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MTR Email Configurations</pluralLabel>
</CustomObject>